fix UI dashboard and add upload image to firebase

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,8 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="backdrop-root"></div>
   <div id="overlay-root"></div>
+  <div id="backdrop-loader-root"></div>
+  <div id="overlay-loader-root"></div>
   <div id="root"></div>
  
 
